istio-k8s/techleadsintegration/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: techleadsintegration
    service: techleadsintegration
  name: techleadsintegration
  namespace: techleads
spec:
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: techleadsintegration
  type: ClusterIP
