istio-k8s/techleadsintegration/destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: techleadsintegration
  namespace: techleads
spec:
  host: techleadsintegration
  subsets:
    - labels:
        version: version1
      name: version1
